objects/PaymentMethodType__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>DebitoProxFactura__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Debito prox factura</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Efectivo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Efectivo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PaymentMethodQuantity__c</fullName>
        <description>Cantidad de métodos posibles para múltiples medios de pago.</description>
        <label>Payment Method Quantity</label>
        <precision>1</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tarjeta_Debito__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tarjeta Debito</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tarjeta__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tarjeta</label>
        <type>Checkbox</type>
    </fields>
    <label>Payment Method Type</label>
</CustomObject>